@@ -1,6 +1,7 @@
 {assign var=page_count value=$smarty.request.limit}
 {assign var=page_str value=''}
 {foreach from=$smarty.get key=k item=v}
+{assign var=v value=$v|urlencode|htmlspecialchars}
 {if $k != "start"}
 {if $page_str != ''}{assign var=page_str value=$page_str|cat:'&amp;'}{/if}
 {assign var=page_str value=$page_str|cat:$k|cat:'='|cat:$v}
