@@ -1,5 +1,6 @@
 2009-03-06
 Fixed zip template, crc() can work with a file pointer, still working on bt.php plugin which uses md5
+Improved searching capabilities in db_file
 
 2009-03-04
 Worked on db_playlist module, mostly working just needs some tweaks
